   Method(StringParameter => "33"). Paws will now auto-stringify the contents in these parameters
   so AWS will accept them correctly, and the programmer doesn't have to worry about stringifying
   his inputs. Thanks to ilmari and rpcme
 - New API: Budgets
 - New API: SMS (Server Migration Service)
 - SES API update: Tagging and ConfigurationSets
 - CloudFormation API update
 - ElasticBeanstalk API update
 - Gamelift API update: DescribeInstances
 - ECR API update: DescribeImages
 - ACM API update: ImportCertificate
 - RDS API update: DescribeSourceRegions, Add and Remove RoleToDBCluster
 - ServiceCatalog API update: AccessLevelFilter support
 - CloudFront API update: version 2016-09-07 support
 - CodePipeline API update: GetPipelineExecution
 - CognitoIdp API update: UserImportJob operations
 - Gamelift API update: OperatingSystem for CreateBuild
 - Route53 API update: TestDNSAnswer
 - CodeDeploy API update
 - RedShift API update: Enhanced VPC Routing
 - RDS API update: Timezones and ReadEnpoints
 - EMR API update: SecurityConfigurations
 - IoT API update
 - CloudFormation API update: RoleArn
 - EC2 API update: ReservedInstancesExchangeQuote
 - S3 API update
 - ElastiCache API update
 - IoT API update: DynamoV2 behaviour
 - CognitoIdp API update: AdminCreateUser

0.28 30 Aug 2015 23:45:00
 - On errors 503 XMLResponse would not process the error correctly (returning
   a non-Paws exception, so the error couldn't be retried. (brianhartsock)
 - New API: Snowball
 - New API: KinesisAnalytics
 - New API: ELBv2 (Application Load Balancer)
 - Route53: API update: GetDomainSuggestions, RenewDomain, ViewBilling
 - RDS: API update: RestoreDBClusterFromS3
 - KMS: API update: DeleteImportedKeyMaterial, GetParametersForImport, ImportKeyMaterial
 - WorkSpaces API update: DescribeWorkspacesConnectionStatus ModifyWorkspaceProperties StartWorkspaces StopWorkspaces
 - IoT API update: ThingTypes operations, ListOutgoingCertificates