@@ -1,0 +1,62 @@
+package Paws::DirectConnect::Tag;
+  use Moose;
+  has Key => (is => 'ro', isa => 'Str', xmlname => 'key', request_name => 'key', traits => ['Unwrapped','NameInRequest'], required => 1);
+  has Value => (is => 'ro', isa => 'Str', xmlname => 'value', request_name => 'value', traits => ['Unwrapped','NameInRequest']);
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DirectConnect::Tag
+
+=head1 USAGE
+
+This class represents one of two things:
+
+=head3 Arguments in a call to a service
+
+Use the attributes of this class as arguments to methods. You shouldn't make instances of this class. 
+Each attribute should be used as a named argument in the calls that expect this type of object.
+
+As an example, if Att1 is expected to be a Paws::DirectConnect::Tag object:
+
+  $service_obj->Method(Att1 => { Key => $value, ..., Value => $value  });
+
+=head3 Results returned from an API call
+
+Use accessors for each attribute. If Att1 is expected to be an Paws::DirectConnect::Tag object:
+
+  $result = $service_obj->Method(...);
+  $result->Att1->Key
+
+=head1 DESCRIPTION
+
+Information about a tag.
+
+=head1 ATTRIBUTES
+
+
+=head2 B<REQUIRED> Key => Str
+
+  The key of the tag.
+
+
+=head2 Value => Str
+
+  The value of the tag.
+
+
+
+=head1 SEE ALSO
+
+This class forms part of L<Paws>, describing an object used in L<Paws::DirectConnect>
+
+=head1 BUGS and CONTRIBUTIONS
+
+The source code is located here: https://github.com/pplu/aws-sdk-perl
+
+Please report bugs to: https://github.com/pplu/aws-sdk-perl/issues
+
+=cut
+
