@@ -1,0 +1,64 @@
+
+package Paws::DirectConnect::TagResource;
+  use Moose;
+  has ResourceArn => (is => 'ro', isa => 'Str', traits => ['NameInRequest'], request_name => 'resourceArn' , required => 1);
+  has Tags => (is => 'ro', isa => 'ArrayRef[Paws::DirectConnect::Tag]', traits => ['NameInRequest'], request_name => 'tags' , required => 1);
+
+  use MooseX::ClassAttribute;
+
+  class_has _api_call => (isa => 'Str', is => 'ro', default => 'TagResource');
+  class_has _returns => (isa => 'Str', is => 'ro', default => 'Paws::DirectConnect::TagResourceResponse');
+  class_has _result_key => (isa => 'Str', is => 'ro');
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DirectConnect::TagResource - Arguments for method TagResource on Paws::DirectConnect
+
+=head1 DESCRIPTION
+
+This class represents the parameters used for calling the method TagResource on the 
+AWS Direct Connect service. Use the attributes of this class
+as arguments to method TagResource.
+
+You shouldn't make instances of this class. Each attribute should be used as a named argument in the call to TagResource.
+
+As an example:
+
+  $service_obj->TagResource(Att1 => $value1, Att2 => $value2, ...);
+
+Values for attributes that are native types (Int, String, Float, etc) can passed as-is (scalar values). Values for complex Types (objects) can be passed as a HashRef. The keys and values of the hashref will be used to instance the underlying object.
+
+=head1 ATTRIBUTES
+
+
+=head2 B<REQUIRED> ResourceArn => Str
+
+The Amazon Resource Name (ARN) of the Direct Connect resource.
+
+Example:
+arn:aws:directconnect:us-east-1:123456789012:dxcon/dxcon-fg5678gh
+
+
+
+=head2 B<REQUIRED> Tags => ArrayRef[L<Paws::DirectConnect::Tag>]
+
+The list of tags to add.
+
+
+
+
+=head1 SEE ALSO
+
+This class forms part of L<Paws>, documenting arguments for method TagResource in L<Paws::DirectConnect>
+
+=head1 BUGS and CONTRIBUTIONS
+
+The source code is located here: https://github.com/pplu/aws-sdk-perl
+
+Please report bugs to: https://github.com/pplu/aws-sdk-perl/issues
+
+=cut
+
