@@ -1,0 +1,18 @@
+
+package Paws::DirectConnect::TagResourceResponse;
+  use Moose;
+
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DirectConnect::TagResourceResponse
+
+=head1 ATTRIBUTES
+
+
+
+=cut
+
+1;
