@@ -1,0 +1,61 @@
+
+package Paws::DirectConnect::UntagResource;
+  use Moose;
+  has ResourceArn => (is => 'ro', isa => 'Str', traits => ['NameInRequest'], request_name => 'resourceArn' , required => 1);
+  has TagKeys => (is => 'ro', isa => 'ArrayRef[Str|Undef]', traits => ['NameInRequest'], request_name => 'tagKeys' , required => 1);
+
+  use MooseX::ClassAttribute;
+
+  class_has _api_call => (isa => 'Str', is => 'ro', default => 'UntagResource');
+  class_has _returns => (isa => 'Str', is => 'ro', default => 'Paws::DirectConnect::UntagResourceResponse');
+  class_has _result_key => (isa => 'Str', is => 'ro');
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DirectConnect::UntagResource - Arguments for method UntagResource on Paws::DirectConnect
+
+=head1 DESCRIPTION
+
+This class represents the parameters used for calling the method UntagResource on the 
+AWS Direct Connect service. Use the attributes of this class
+as arguments to method UntagResource.
+
+You shouldn't make instances of this class. Each attribute should be used as a named argument in the call to UntagResource.
+
+As an example:
+
+  $service_obj->UntagResource(Att1 => $value1, Att2 => $value2, ...);
+
+Values for attributes that are native types (Int, String, Float, etc) can passed as-is (scalar values). Values for complex Types (objects) can be passed as a HashRef. The keys and values of the hashref will be used to instance the underlying object.
+
+=head1 ATTRIBUTES
+
+
+=head2 B<REQUIRED> ResourceArn => Str
+
+The Amazon Resource Name (ARN) of the Direct Connect resource.
+
+
+
+=head2 B<REQUIRED> TagKeys => ArrayRef[Str|Undef]
+
+The list of tag keys to remove.
+
+
+
+
+=head1 SEE ALSO
+
+This class forms part of L<Paws>, documenting arguments for method UntagResource in L<Paws::DirectConnect>
+
+=head1 BUGS and CONTRIBUTIONS
+
+The source code is located here: https://github.com/pplu/aws-sdk-perl
+
+Please report bugs to: https://github.com/pplu/aws-sdk-perl/issues
+
+=cut
+
