@@ -1,0 +1,18 @@
+
+package Paws::DirectConnect::UntagResourceResponse;
+  use Moose;
+
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::DirectConnect::UntagResourceResponse
+
+=head1 ATTRIBUTES
+
+
+
+=cut
+
+1;
